# aoe1-decomp

./: .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  CMakeLists.txt  GLOBALS_empiresx.exe.c  NEXT_STEPS.md  PENDING.md  REVIEW_FINDINGS.md  STRUCTS_AND_ENUMS_empiresx.exe.c  UNNAMED_FUNCS_empiresx.exe.c  all_types_ground_truth.h  build.bat  build_and_run.bat  build_and_verify.bat  build_discover_sources.ps1  build_err.txt  build_exclude_sources.txt  build_log.txt  build_log_2.txt  build_log_current.txt  build_log_full.txt  build_log_verify.txt  build_output.txt  build_output_2.txt  check_scenario_size.cpp  context_next_tasks.md  empiresx.exe.h  mulltiple_agents_preset_prompts.md  multiple_agents_preset_prompts.md  multiple_agents_task_queue.md  multiple_agents_workflow.md  preset_prompts.md  report_sizes.bat  rge_funcs.txt  run_autoplay_regression_loop.ps1  run_built_game.bat  session_output.md  sizes_chat.txt  sizes_mouse.txt  test_encrypt.cpp  (+3 more)
.agent/rules/: task.md
.github/agents/: decomp-orchestrator.agent.md  decomp-truth-searcher.agent.md  decomp-verifier-lite.agent.md  decomp-verifier.agent.md  decomp-worker.agent.md  fleet-orchestrator.agent.md
.github/hooks/: play_done_sound.ps1  stop.json
build_new/: CMakeCache.txt
data2/: 4 Emps 2.ai  4Emp2.per  4Emp4.per  Archers Bronze.ai  Archers Iron.ai  Assyria Archers Bronze.ai  Assyria Archers Iron.ai  Assyria Ballista.ai  Assyria Bowmen.ai  Assyria Bronze Water.ai  Assyria Infantry Bronze.ai  Assyria Iron Water.ai  Babylon Scouts.ai  Babylon Swordsmen.ai  Babylon Water.ai  Birth3.per  Birth5.per  Birth6.per  Birth7.per  Britain P2.ai  Britain P2.per  Britain P3.ai  Britain P3.per  Britain P4.ai  Britain P5.ai  Cannae P2.ai  Cannae P3.ai  Cannae P3.per  Cannae P4.ai  Cannae P4.per  Cannae Player 2 old.per  Cannae Player 2.per  Carthage Bronze Water.ai  Carthage Iron Water.ai  Carthage War Elephant.ai  Cav Archer Iron.ai  Cavalry Bronze.ai  Cavalry Iron.ai  Cleo.ai  CvP.ai  (+111 more)
ghidra_decomp/: common_types.h  globals.json
ghidra_decomp/Classes/: IPAD.c  (+289 more)
old_src/: main.cpp  types.h
src/: RGE_Base_Game.cpp  RGE_Base_Game.txt  RGE_Prog_Info.h  anon_enums.h  common.h  fix_overloaded_constructors.py  identify_overloaded_constructors.py  main.cpp  types.h  verify_sizes.cpp
(+3727 files in other folders)
